--- a/estilo.css
+++ b/estilo.css
@@ -26,6 +26,7 @@ body{
     box-shadow: rgba(0, 0, 0, 0.80) 1.95px 1.95px 2.6px;
     padding: 10px;
     margin: auto;
+    font-size: 20px;
    
 }
 
